--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Speed Up Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="header">
+        <div class="header-content">
+            <h2 class="title">Speed it Up</h2>
+            <h5 class="sub-title">... as if your life depends on it.</h5>
+        </div>
+    </div>
+    <div class="content">
+        <div class="left">
+            div.row*5>div.cell*5>span.alphabet{D $}
+        </div>
+        <div class="right"></div>
+    </div>
+    <div class="footer"><h4 class="footer-title">have fun</h4></div>
+    <script src="js/app.js"></script>
+</body>
+</html>
