some working code

--- a/index.html
+++ b/index.html
@@ -17,12 +17,52 @@
         </div>
     </div>
     <div class="content">
-        <div class="left">
-            div.row*5>div.cell*5>span.alphabet{D $}
+        <div class="grid">
+            <!--div.row*5>div.cell*5>span.alphabet{D $}-->
+            <div class="row">
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+            </div>
+            <div class="row">
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+            </div>
+            <div class="row">
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+            </div>
+            <div class="row">
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+            </div>
+            <div class="row">
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+                <div class="cell"><span class="alphabet"></span></div>
+            </div>
         </div>
-        <div class="right"></div>
+        <div class="output">
+            <span class="result blank"></span><span class="result blank"></span><span
+                class="result blank"></span><span class="result blank"></span><span class="result blank"></span>
+        </div>
     </div>
     <div class="footer"><h4 class="footer-title">have fun</h4></div>
+
+    <script src="js/jquery.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
