dynamic row and columns handling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="content">
         <div class="grid">
             <!--div.row*5>div.cell*5>span.alphabet{D $}-->
-            <div class="row">
+            <!--<div class="row">
                 <div class="cell"><span class="alphabet"></span></div>
                 <div class="cell"><span class="alphabet"></span></div>
                 <div class="cell"><span class="alphabet"></span></div>
@@ -53,7 +53,7 @@
                 <div class="cell"><span class="alphabet"></span></div>
                 <div class="cell"><span class="alphabet"></span></div>
                 <div class="cell"><span class="alphabet"></span></div>
-            </div>
+            </div>-->
         </div>
         <div class="output">
             <span class="result blank"></span><span class="result blank"></span><span
